--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,27 @@
-# This file stores configurations for your Shopify app.
+# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
+name = "my-node-app"
+client_id = "3307b03ef529b67d4f045dc1b2490cf7"
+application_url = "https://opened-standings-event-chat.trycloudflare.com"
+embedded = true
+
+[access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "write_products"
+
+[auth]
+redirect_urls = [
+  "https://opened-standings-event-chat.trycloudflare.com/auth/callback",
+  "https://opened-standings-event-chat.trycloudflare.com/auth/shopify/callback",
+  "https://opened-standings-event-chat.trycloudflare.com/api/auth/callback"
+]
+
+[webhooks]
+api_version = "2023-07"
+
+[pos]
+embedded = false
+
+[build]
+automatically_update_urls_on_dev = true
+dev_store_url = "test-teton.myshopify.com"
