--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,9 @@
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.3",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.2",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
